<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HotelClubs</string>
    <string name="action_settings">Settings</string>
    <string name="body">Please Add Your Reviews Here</string>
    <string name="Name">Please Add Your Name Here</string>
    <string name="title">FeedBack Form</string>
    <string name="Submit">Submit</string>
    <string name="header">Review Form</string>
    <string name="menuDesc">Menu Desc</string>
    <string name="review">REVIEWS</string>
    <string name="forward">Forward</string>
    <string name="gallery">Gallery</string>
    <string name="addReview">Add Review</string>
    <string name="menu">Menu</string>
    <string name="Contact">Contact Us</string>
    <string name="Callus">Call Us \n+16138515658</string>
    <string name="emailus">Email Us \njaymehta197@gmail.com</string>
    <string name="backbutton">Back</string>
    <string name="refresh">Refresh</string>
    <string name="addReviewstext">Add My Review</string>

    <color name="black">#000000</color>
    <color name="transparent">#10000000</color>
    <color name="white">#FFFFFF</color>
    <color name="yellow">#ffff00</color>
    <color name="red">#FF0000</color>
    <color name="blue">#F0F8FF</color>
    <color name="orange">#ffa500</color>
    <!--
    <color name="focused">#000000</color>
    <color name="selected">#FF0000</color>
    -->

    <string name="Copyright">FREE WIFI AVAILABLE IN YOUR RESTAURANT</string>

</resources>