<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >

    <RelativeLayout
        android:id="@+id/photoreviewHeader"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/photoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/bg_1"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/photoTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/photoBack"
            android:background="@drawable/alt"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/photoreviewHeader"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/photoThumbNail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/Copyright"
            android:scaleType="centerCrop" />
    </LinearLayout>

</RelativeLayout>