<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/reviewHeader"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/reviewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_1"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/reviewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/reviewBack"
            android:background="@drawable/alt"
            android:gravity="center"
            android:text="@string/review"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imgRefreshHeader"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/reviewHeader" >

        <ImageView
            android:id="@+id/imgRefresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_1"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh_icon" />
    </RelativeLayout>

    <ListView
        android:id="@+id/reviewlist"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_below="@+id/reviewHeader"
        android:listSelector="@drawable/list_selector"
        android:background="@drawable/pattern"
        android:cacheColorHint="#00000000"
        android:dividerHeight="1dip"
        android:fadeScrollbars="true" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/alt"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/addReviewstext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/reviews"
            android:gravity="center|start"
            android:text="@string/addReviewstext"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>