<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
     >

    <RelativeLayout
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_1" >

        <ImageView
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/imgNavBack"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imgRefreshHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_1"
        android:layout_toRightOf="@+id/lytTitlebar" >

        <ImageView
            android:id="@+id/imgRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/refresh"
            android:src="@drawable/refresh_icon" />
    </RelativeLayout>

    <ListView
        android:id="@+id/listCat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytTitlebar"
        android:cacheColorHint="#00000000"
        android:background="@drawable/pattern"
        android:dividerHeight="1dip"
        android:fadeScrollbars="true"
        android:listSelector="@drawable/list_selector" />

</RelativeLayout>