<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/itemreviewHeader"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/itemreviewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_1"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/itemreviewTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/itemimgRefresh"
            android:layout_toRightOf="@+id/itemreviewBack"
            android:background="@drawable/alt"
            android:gravity="center"
            android:text="@string/menu"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemreviewHeader"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/itemPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Copyright"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:id="@+id/itemtexts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/itemName"         
                android:background="@color/orange"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/itemdetails"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>